<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>ovh.uskyblock</groupId>
    <artifactId>uSkyBlock</artifactId>
    <packaging>pom</packaging>
    <version>3.2.0-SNAPSHOT</version>
    <name>Ultimate SkyBlock</name>

    <properties>
        <adventure-api.version>4.16.0</adventure-api.version>
        <adventure-bukkit.version>4.3.2</adventure-bukkit.version>
        <apache-commons.version>3.14.0</apache-commons.version>
        <apache-commons-text.version>1.12.0</apache-commons-text.version>
        <apache-http.version>4.5.14</apache-http.version>
        <gson.version>2.10.1</gson.version>
        <guava.version>33.1.0-jre</guava.version>
        <jbannotations.version>23.0.0</jbannotations.version>
        <maven-artifact.version>3.8.6</maven-artifact.version>
        <api.version>${project.version}</api.version>
        <paperlib.version>1.0.8</paperlib.version>
        <spigotapi.version>1.21.10-R0.1-SNAPSHOT</spigotapi.version>
        <vault.version>1.7</vault.version>
        <worldedit.version>7.2.19</worldedit.version>
        <worldguard.version>7.0.9</worldguard.version>
        <guice.version>7.0.0</guice.version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <finalName>${project.artifactId}</finalName>
        <GITHUB_TOKEN>invalid</GITHUB_TOKEN>
        <travis.buildNumber>dev</travis.buildNumber>
        <msgfmtCmd>msgfmt</msgfmtCmd>
        <msgmergeCmd>msgmerge</msgmergeCmd>

        <!-- Testing -->
        <hamcrest.version>2.2</hamcrest.version>
        <junit.version>4.13.2</junit.version>
        <junit-vintage-engine.version>5.9.0</junit-vintage-engine.version>
        <mockito.version>5.14.2</mockito.version>
    </properties>

    <modules>
        <module>po-utils</module>
        <module>bukkit-utils</module>
        <module>uSkyBlock-API</module>
        <module>uSkyBlock-APIv2</module>
        <module>uSkyBlock-Core</module>
        <module>uSkyBlock-Plugin</module>
        <module>uSkyBlock-FAWE</module>
    </modules>

    <scm>
        <connection>scm:git:git://github.com/uskyblock/uSkyBlock.git</connection>
        <developerConnection>scm:git:git://github.com/uskyblock/uSkyBlock.git</developerConnection>
        <url>https://github.com/uskyblock/uSkyBlock.git</url>
    </scm>

    <distributionManagement>
        <repository>
            <id>internal.repo</id>
            <name>Temporary Staging Repository</name>
            <url>file://${project.build.directory}/mvn-repo</url>
        </repository>
    </distributionManagement>

    <build>
        <finalName>${finalName}</finalName>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                    <configuration>
                        <release>21</release>
                        <encoding>UTF-8</encoding>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.4.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.11.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>3.6.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.3.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>3.4.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>3.5.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>3.7.1</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.5.0</version>
                <executions>
                    <execution>
                        <id>enforce-maven</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>3.8.1</version>
                                </requireMavenVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <repositories>
        <repository> <!-- Bukkit & Spigot API -->
            <id>spigotmc.org</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/public</url>
        </repository>
        <repository> <!-- PaperLib -->
            <id>papermc</id>
            <url>https://papermc.io/repo/repository/maven-public/</url>
        </repository>
        <repository> <!-- WorldEdit/WorldGuard -->
            <id>sk89q-repo</id>
            <!-- <url>https://maven.sk89q.com/repo/</url> -->
            <url>https://maven.enginehub.org/repo/</url>
        </repository>
        <repository> <!-- Adventure development builds -->
            <id>sonatype-oss-snapshots</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
        </repository>
        <repository> <!-- bStats -->
            <id>CodeMC</id>
            <url>https://repo.codemc.org/repository/maven-public</url>
        </repository>
        <repository> <!-- MVdWPlaceholderApi -->
            <id>mvdw-software</id>
            <url>https://repo.mvdw-software.com/content/groups/public/</url>
        </repository>
        <repository> <!-- uSkyBlock dependencies that don't have a (stable) repository -->
            <id>uskyblock-dependencies</id>
            <url>https://www.uskyblock.ovh/maven/dependencies/</url>
        </repository>
        <repository> <!-- uSkyBlock plugin artifacts -->
            <id>uskyblock-maven</id>
            <url>https://www.uskyblock.ovh/maven/uskyblock/</url>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>apache-snapshots</id>
            <url>https://repository.apache.org/snapshots/</url>
        </pluginRepository>
        <pluginRepository>
            <id>uskyblock-dependencies</id>
            <url>https://www.uskyblock.ovh/maven/dependencies/</url>
        </pluginRepository>
    </pluginRepositories>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>net.milkbowl.vault</groupId>
                <artifactId>VaultAPI</artifactId>
                <optional>true</optional>
                <version>${vault.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.bukkit</groupId>
                        <artifactId>bukkit</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>com.github.rlf</groupId>
                <artifactId>uSkyBlock-API</artifactId>
                <version>${api.version}</version>
            </dependency>
            <dependency>
                <groupId>ovh.uskyblock</groupId>
                <artifactId>uSkyBlock-APIv2</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>ovh.uskyblock</groupId>
                <artifactId>uSkyBlock-Core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>ovh.uskyblock</groupId>
                <artifactId>uSkyBlock-FAWE</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>ovh.uskyblock</groupId>
                <artifactId>po-utils</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jetbrains</groupId>
                <artifactId>annotations</artifactId>
                <version>${jbannotations.version}</version>
            </dependency>
            <dependency>
                <groupId>io.papermc</groupId>
                <artifactId>paperlib</artifactId>
                <version>${paperlib.version}</version>
            </dependency>
            <dependency>
                <groupId>net.kyori</groupId>
                <artifactId>adventure-api</artifactId>
                <version>${adventure-api.version}</version>
            </dependency>
            <dependency>
                <groupId>net.kyori</groupId>
                <artifactId>adventure-platform-bukkit</artifactId>
                <version>${adventure-bukkit.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>${gson.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.httpcomponents</groupId>
                <artifactId>httpclient</artifactId>
                <version>${apache-http.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.maven</groupId>
                <artifactId>maven-artifact</artifactId>
                <version>${maven-artifact.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
